--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,10 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin-top: 10px;
+    padding-top: 10px;
+    margin-bottom: 10px;
     border-bottom: 2px solid var(--grey-color);
+    background-color: white;
 }
 
 .nav-list {
@@ -28,10 +30,20 @@
     font-size: 18px;
     margin: 10px;
 }
+.button-container {
+    margin-bottom: 10px;
+}
 .signup {
     width: 140px;
     height: 55px;
-    margin: 5px;
     background-color: var(--button-color);
     border: 1px solid var(--button-border);
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 600;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
