--- a/src/App.css
+++ b/src/App.css
@@ -87,3 +87,29 @@
 .search p {
     color:var(--grey-color);
 }
+/* Secondary Nav Styles Go here */
+.no-border {
+    border: none;
+}
+.item-sorter {
+    width: 120px;
+    height: 57px;
+    border: 1px solid var(--grey-color);
+    padding: 10px;
+}
+.item-sorter option {
+    text-transform: capitalize;
+}
+.nav-list a:hover {
+    border-bottom: 5px solid var(--underline-color);
+}
+.favorite {
+    background-color: white;
+    border: 1px solid var(--grey-color);
+    width: 50px;
+    height: 50px;
+}
+.favorite img {
+    width: 30px;
+    height: 30px;
+}
