--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
     --primary-color: #0D65F8;
     --underline-color: #E47911;
     --grey-color: #C5C5C5;
+    --price-color: #2ABFB5;
 }
 
 
@@ -31,9 +32,10 @@
     margin: 10px;
 }
 .button-container {
-    margin-bottom: 10px;
+    margin: 5px;
+    display: inline-block;
 }
-.signup {
+.major-button {
     width: 140px;
     height: 55px;
     background-color: var(--button-color);
@@ -41,6 +43,7 @@
     text-transform: capitalize;
     font-size: 18px;
     font-weight: 600;
+    
 }
 .sticky {
     position: fixed;
@@ -77,19 +80,15 @@
     margin-right:20px;
     margin-bottom: 20px;
 }
-.search button {
-    background-color: var(--button-color);
-    border: 1px solid var(--button-border);
-    text-transform: capitalize;
-    width: 134px;
-    height: 57px;
-}
+
 .search p {
     color:var(--grey-color);
 }
 /* Secondary Nav Styles Go here */
 .no-border {
     border: none;
+    width: 1500px;
+    margin: auto auto;
 }
 .item-sorter {
     width: 120px;
@@ -112,4 +111,252 @@
 .favorite img {
     width: 30px;
     height: 30px;
+}
+/* Item Styles Go Here! */
+.item-list {
+    width: 1500px;
+    margin: auto auto;
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.item-container {
+    width: 256px;
+    height: 370px;
+    border: 1px solid var(--grey-color);
+
+}
+.item-container h1 {
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: capitalize;
+    padding: 10px;
+}
+.price-container {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+.price-container h2 {
+    font-size: 20px;
+}
+.new-price {
+    color: var(--price-color);
+}
+.old-price {
+    color: var(--grey-color);
+}
+.buy-button {
+    width: 200px;
+    height: 70px;
+    background-color: var(--button-color);
+    border: 1px solid var(--button-border);
+    border-radius: 5px;
+    text-transform: capitalize;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-left: 25px;
+}
+/* Newsletter Styles Start Here */
+.newsletter-container {
+    width: 1500px;
+    height: 300px;
+    background-color:var(--primary-color);
+    display: flex;
+    margin: auto auto;
+    padding: 20px;
+    align-items: center;
+}
+.newsletter-text {
+    width: 900px;
+}
+.newsletter-text h1 {
+    font-size: 45px;
+    color: white;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+.newsletter-text input {
+    width: 356px;
+    height: 56px;
+    border: 1px solid var(--grey-color);
+    padding: 10px;
+    margin-right: 10px;
+}
+.newsletter-text input::placeholder {
+    text-align:center;
+    text-transform: capitalize;
+    font-weight: 600;
+    color: var(--grey-color);
+}
+.newsletter-text p {
+    color: #79ABFE;
+    text-transform: capitalize;
+}
+.newsletter-img {
+    width: 1200px;
+    height: 280px;
+}
+.newsletter-img img {
+    width: 100%;
+    height: 100%;
+}
+/* Footer Styles Begin Here */
+.footer-container {
+    display: flex;
+    width: 100%;
+    height: 200px;
+    justify-content: space-evenly;
+    margin-top: 100px;
+}
+.links ul {
+    list-style-type: none;
+    text-transform: capitalize;
+    font-size: 18px;
+}
+.links ul li {
+    margin-bottom: 10px;
+}
+.links h4 {
+    font-size: 20px;
+}
+.social-media h4 {
+    font-size: 20px;
+    text-transform: capitalize;
+}
+.social-media img {
+    margin: 10px;
+}
+/* mediq queries start here */
+@media only screen and (max-width: 1366px){
+    .hero-container {
+        grid-template-columns: max-content 1fr;
+        overflow-x: hidden;
+    }
+    .hero-text {
+        padding-top: 150px;
+        padding-left: 50px;
+    }
+    .hero-text h1 {
+        font-size: 45px;
+        line-height: 60px;
+    }
+    .hero-img img {
+        width: 1000px;
+    }
+    /* Search Field Styling Goes Here */
+    .search input {
+        width: 400px;
+        height: 57px;
+        background-color: #F1F6F9;
+        border: 1px solid var(--grey-color);
+        padding: 10px;
+        margin-right:20px;
+        margin-bottom: 20px;
+    }
+    
+    .search p {
+        color:var(--grey-color);
+    }
+/* Secondary Navigation Media Styles Goes Here */
+    .no-border {
+        border: none;
+        width: 1200px;
+        margin: auto auto;
+    }
+/* Media Query Item Styles Go Here! */
+.item-list {
+    width: 1000px;
+    margin: auto auto;
+    padding: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+/* Media Query Newsletter Styles Start Here */
+.newsletter-container {
+    width: 1100px;
+    height: 300px;
+}
+.newsletter-text {
+    width: 500px;
+}
+.newsletter-text h1 {
+    font-size: 25px;
+    color: white;
+    margin-bottom: 10px;
+}
+.newsletter-text input {
+    width: 250px;
+    height: 56px;
+}
+.newsletter-text p {
+    color: #79ABFE;
+    text-transform: capitalize;
+}
+.newsletter-img {
+    width: 780px;
+    height: 250px;
+}
+}
+@media only screen and (max-width: 1024px){
+    .hero-container {
+        width: 1200px;
+        margin: auto auto;
+        grid-template-columns: 1fr;
+        overflow-x: hidden;
+    }
+    .hero-text {
+        padding-top: 150px;
+        padding-left: 50px;
+    }
+    .hero-text h1 {
+        font-size: 65px;
+        line-height: 77px;
+        text-align: center;
+    }
+    .hero-img img {
+        display: none;
+    }
+    .search {
+        width: 600px;
+        margin: auto auto;
+    }
+    .search input {
+        width: 430px;
+        height: 57px;
+    }
+    
+    .search p {
+        text-align: center;
+    }
+    /* Media Query for 1024px Secondary Nav */
+    .no-border {
+        border: none;
+        width: 1100px;
+        margin: auto auto;
+    }
+    .item-list {
+        width: 1200px;
+        margin: auto auto;
+        padding: 40px;
+    }
+    .newsletter-container {
+        width: 1200px;
+        height: 300px;
+        background-color:var(--primary-color);
+        display: flex;
+        margin: auto auto;
+        padding: 20px;
+        align-items: center;
+    }
+    .footer-container {
+        width: 100%;
+        height: 200px;
+        justify-content: space-evenly;
+        margin-top: 100px;
+    }    
+       
 }
